Bug 196681 - Plasma crashed while closing konqueor window (null KDirLister::directories, KFilePreviewGenerator::Private::updateCutItems)
Summary: Plasma crashed while closing konqueor window (null KDirLister::directories, K...
Status: RESOLVED FIXED
Alias: None
Product: kfile
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
: 197304 198449 198896 200222 203340 204786 205034 205096 205965 206118 207411 207895 209407 211102 212423 213357 213391 213632 213999 214066 214319 216965 218605 218893 219936 220742 221060 221130 223637 225464 228566 229196 231046 231194 231830 231984 232719 233748 234094 234317 234640 234699 234708 236831 236939 240199 241243 242992 244786 245493 246299 249042 250334 251587 253825 254499 256556 256977 257066 257112 259560 261338 261822 262534 264137 265146 268769 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-06-15 23:17 UTC by Unknown
Modified: 2011-04-12 10:55 UTC (History)
66 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.5.2
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (3.21 KB, text/plain)
2010-03-10 15:42 UTC, Alvaro Manuel Recio Perez
Details
patch that should help to figure out what goes wrong (1.69 KB, patch)
2010-03-11 01:56 UTC, Sebastian Sauer
Details
backtrace that happens with patch from Comment #41 (8.75 KB, text/plain)
2010-03-21 19:46 UTC, Sebastian Sauer
Details
patch for kfile/kfilepreviewgenerator.cpp that should solve the problem (641 bytes, patch)
2010-03-21 19:48 UTC, Sebastian Sauer
Details
New crash information added by DrKonqi (2.63 KB, text/plain)
2010-04-25 05:47 UTC, Mario García H.
Details
New crash information added by DrKonqi (11.67 KB, text/plain)
2010-08-13 10:36 UTC, gianted
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Unknown 2009-06-15 23:17:38 UTC
Application that crashed: plasma-desktop
Version of the application: 0.3
KDE Version: 4.2.90 (KDE 4.2.90 (KDE 4.3 Beta2))
Qt Version: 4.5.1
Operating System: Linux 2.6.28-12-generic i686
Distribution: Ubuntu 9.04

What I was doing when the application crashed:
Plasma just crashed while closing konqueor window, after changing browser identificatiion.

 -- Backtrace:
Application: Plasma Workspace (kdeinit), signal: Segmentation fault
[Current thread is 0 (LWP 3123)]

Thread 4 (Thread 0xa8583b90 (LWP 3126)):
#0  0xb7f64430 in __kernel_vsyscall ()
#1  0xb64600e5 in pthread_cond_wait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb66402ed in pthread_cond_wait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb7d685b2 in QWaitCondition::wait (this=0x8ea1440, mutex=0x8ea143c, time=4294967295) at thread/qwaitcondition_unix.cpp:87
#4  0xb76acae2 in QHostInfoAgent::run (this=0x8ea1430) at kernel/qhostinfo.cpp:260
#5  0xb7d6756e in QThreadPrivate::start (arg=0x8ea1430) at thread/qthread_unix.cpp:189
#6  0xb645c4ff in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#7  0xb663149e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 3 (Thread 0xa369db90 (LWP 3128)):
#0  0xb7f64430 in __kernel_vsyscall ()
#1  0xb6460412 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb6640344 in pthread_cond_timedwait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb7d66f59 in thread_sleep (ti=0xa369d2b0) at thread/qthread_unix.cpp:298
#4  0xb7d6708b in QThread::msleep (msecs=<value optimized out>) at thread/qthread_unix.cpp:324
#5  0xa8800138 in Update_Thread::run () from /usr/lib/kde4/plasma_applet_cwp.so
#6  0xb7d6756e in QThreadPrivate::start (arg=0x98ca6a0) at thread/qthread_unix.cpp:189
#7  0xb645c4ff in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#8  0xb663149e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 2 (Thread 0xa3fa3b90 (LWP 12617)):
#0  0xb7f64430 in __kernel_vsyscall ()
#1  0xb6460412 in pthread_cond_timedwait@@GLIBC_2.3.2 () from /lib/tls/i686/cmov/libpthread.so.0
#2  0xb6640344 in pthread_cond_timedwait () from /lib/tls/i686/cmov/libc.so.6
#3  0xb7d66f59 in thread_sleep (ti=0xa3fa32b0) at thread/qthread_unix.cpp:298
#4  0xb7d6708b in QThread::msleep (msecs=<value optimized out>) at thread/qthread_unix.cpp:324
#5  0xa8800138 in Update_Thread::run () from /usr/lib/kde4/plasma_applet_cwp.so
#6  0xb7d6756e in QThreadPrivate::start (arg=0x8fa3e10) at thread/qthread_unix.cpp:189
#7  0xb645c4ff in start_thread () from /lib/tls/i686/cmov/libpthread.so.0
#8  0xb663149e in clone () from /lib/tls/i686/cmov/libc.so.6

Thread 1 (Thread 0xb5f6aa10 (LWP 3123)):
[KCrash Handler]
#6  KDirLister::directories (this=0x1) at /usr/include/qt4/QtCore/qlist.h:111
#7  0xb5c292f7 in KFilePreviewGenerator::Private::updateCutItems (this=0x8f4f430) at /build/buildd/kde4libs-4.2.90/kfile/kfilepreviewgenerator.cpp:643
#8  0xb5c29f9e in KFilePreviewGenerator::qt_metacall (this=0x8f4f348, _c=QMetaObject::InvokeMetaMethod, _id=4, _a=0xbfd7dcc8)
    at /build/buildd/kde4libs-4.2.90/obj-i486-linux-gnu/kfile/kfilepreviewgenerator.moc:89
#9  0xb7e71a58 in QMetaObject::activate (sender=0x8acb408, from_signal_index=7, to_signal_index=7, argv=0x0) at kernel/qobject.cpp:3120
#10 0xb7e726e2 in QMetaObject::activate (sender=0x8acb408, m=0xb7199548, local_signal_index=3, argv=0x0) at kernel/qobject.cpp:3194
#11 0xb6faddf7 in QClipboard::dataChanged (this=0x8acb408) at .moc/release-shared/moc_qclipboard.cpp:108
#12 0xb696db7d in QApplication::x11ProcessEvent (this=0x8a1ecb8, event=0xbfd7f22c) at kernel/qapplication_x11.cpp:3400
#13 0xb699906a in x11EventSourceDispatch (s=0x8a526b0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#14 0xb64a9b88 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#15 0xb64ad0eb in ?? () from /usr/lib/libglib-2.0.so.0
#16 0xb64ad268 in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#17 0xb7e871d8 in QEventDispatcherGlib::processEvents (this=0x8a4f150, flags={i = -1076366360}) at kernel/qeventdispatcher_glib.cpp:324
#18 0xb6998765 in QGuiEventDispatcherGlib::processEvents (this=0x8a4f150, flags={i = -1076366312}) at kernel/qguieventdispatcher_glib.cpp:202
#19 0xb7e59dda in QEventLoop::processEvents (this=0xbfd7f490, flags={i = -1076366248}) at kernel/qeventloop.cpp:149
#20 0xb7e5a21a in QEventLoop::exec (this=0xbfd7f490, flags={i = -1076366184}) at kernel/qeventloop.cpp:200
#21 0xb7e5c6c9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:888
#22 0xb68f6a47 in QApplication::exec () at kernel/qapplication.cpp:3526
#23 0xb3cfb820 in kdemain (argc=1, argv=0x89e7b40) at /build/buildd/kdebase-workspace-4.2.90/plasma/shells/desktop/main.cpp:50
#24 0x0804e1c0 in launch (argc=1, _name=0x8a23204 "/usr/bin/plasma-desktop", args=0x8a2321c "", cwd=0x0, envc=0, envs=0x8a23220 "", reset_env=false, tty=0x0, avoid_loops=false, 
    startup_id_str=0x80512d0 "0") at /build/buildd/kde4libs-4.2.90/kinit/kinit.cpp:671
#25 0x0804e99d in handle_launcher_request (sock=7, who=<value optimized out>) at /build/buildd/kde4libs-4.2.90/kinit/kinit.cpp:1163
#26 0x0804ef25 in handle_requests (waitForPid=0) at /build/buildd/kde4libs-4.2.90/kinit/kinit.cpp:1356
#27 0x0804fb0a in main (argc=2, argv=0xbfd7fc84, envp=0xbfd7fc90) at /build/buildd/kde4libs-4.2.90/kinit/kinit.cpp:1783

Reported using DrKonqi
Comment 1 Dario Andres 2009-06-16 19:40:51 UTC
From "KFilePreviewGenerator::Private::updateCutItems":

"
KDirLister* dirLister = m_dirModel->dirLister();
const KUrl::List dirs = dirLister->directories(); 
"
Crash
Comment 2 Aaron J. Seigo 2009-06-23 02:52:11 UTC
*** Bug 197304 has been marked as a duplicate of this bug. ***
Comment 3 Marco Martin 2009-06-30 21:00:39 UTC
*** Bug 198449 has been marked as a duplicate of this bug. ***
Comment 4 Dario Andres 2009-07-14 22:28:25 UTC
*** Bug 200222 has been marked as a duplicate of this bug. ***
Comment 5 Dario Andres 2009-08-10 20:54:58 UTC
*** Bug 203340 has been marked as a duplicate of this bug. ***
Comment 6 Dario Andres 2009-08-17 21:41:39 UTC
*** Bug 198896 has been marked as a duplicate of this bug. ***
Comment 7 Dario Andres 2009-08-23 00:01:45 UTC
*** Bug 204786 has been marked as a duplicate of this bug. ***
Comment 8 Dario Andres 2009-08-25 15:57:22 UTC
*** Bug 205034 has been marked as a duplicate of this bug. ***
Comment 9 Dario Andres 2009-08-25 23:10:15 UTC
*** Bug 205096 has been marked as a duplicate of this bug. ***
Comment 10 Dario Andres 2009-09-02 14:02:32 UTC
*** Bug 205965 has been marked as a duplicate of this bug. ***
Comment 11 Dario Andres 2009-09-04 00:07:22 UTC
*** Bug 206118 has been marked as a duplicate of this bug. ***
Comment 12 Dario Andres 2009-09-15 04:02:26 UTC
*** Bug 207411 has been marked as a duplicate of this bug. ***
Comment 13 Dario Andres 2009-09-19 17:52:01 UTC
*** Bug 207895 has been marked as a duplicate of this bug. ***
Comment 14 Magnus Bergmark 2009-10-04 15:41:48 UTC
*** Bug 209407 has been marked as a duplicate of this bug. ***
Comment 15 Dario Andres 2009-10-19 23:11:01 UTC
*** Bug 211102 has been marked as a duplicate of this bug. ***
Comment 16 Dario Andres 2009-10-31 02:31:58 UTC
*** Bug 212423 has been marked as a duplicate of this bug. ***
Comment 17 Aaron J. Seigo 2009-11-06 02:47:16 UTC
*** Bug 213357 has been marked as a duplicate of this bug. ***
Comment 18 Dario Andres 2009-11-06 13:45:36 UTC
*** Bug 213391 has been marked as a duplicate of this bug. ***
Comment 19 Dario Andres 2009-11-10 00:31:27 UTC
*** Bug 213632 has been marked as a duplicate of this bug. ***
Comment 20 Dario Andres 2009-11-10 22:16:51 UTC
*** Bug 213999 has been marked as a duplicate of this bug. ***
Comment 21 Dario Andres 2009-11-11 13:04:28 UTC
*** Bug 214066 has been marked as a duplicate of this bug. ***
Comment 22 FiNeX 2009-11-13 10:49:02 UTC
*** Bug 214319 has been marked as a duplicate of this bug. ***
Comment 23 Dario Andres 2009-12-02 14:05:30 UTC
*** Bug 216965 has been marked as a duplicate of this bug. ***
Comment 24 Beat Wolf 2009-12-14 10:12:46 UTC
*** Bug 218605 has been marked as a duplicate of this bug. ***
Comment 25 Jonathan Thomas 2009-12-16 18:46:09 UTC
*** Bug 218893 has been marked as a duplicate of this bug. ***
Comment 26 Dario Andres 2009-12-24 13:51:29 UTC
*** Bug 219936 has been marked as a duplicate of this bug. ***
Comment 27 Dario Andres 2009-12-30 23:54:30 UTC
*** Bug 220742 has been marked as a duplicate of this bug. ***
Comment 28 Dario Andres 2010-01-03 18:02:18 UTC
*** Bug 221130 has been marked as a duplicate of this bug. ***
Comment 29 Dario Andres 2010-01-05 00:25:48 UTC
*** Bug 221060 has been marked as a duplicate of this bug. ***
Comment 30 Dario Andres 2010-01-21 13:21:08 UTC
*** Bug 223637 has been marked as a duplicate of this bug. ***
Comment 31 Dario Andres 2010-02-04 13:23:02 UTC
*** Bug 225464 has been marked as a duplicate of this bug. ***
Comment 32 Dario Andres 2010-02-26 12:31:24 UTC
*** Bug 228566 has been marked as a duplicate of this bug. ***
Comment 33 Dario Andres 2010-02-26 12:34:10 UTC
So far, nobody experienced this crash on KDE SC 4.3.86+; we could wait a bit more and consider this fixed. (if no new cases appear)
Comment 34 Dotan Cohen 2010-02-26 13:29:22 UTC
Actually, bug 221060 was on KDE 4.3.86
Comment 35 Dario Andres 2010-02-26 13:31:45 UTC
With my "4.3.86+" I wanted to mean ">4.3.86", sorry about the confusion.
Comment 36 ancow 2010-02-26 20:44:13 UTC
I used to experience this bug quite frequently, and it has completely vanished for me since KDE SC 4.4.0.
Comment 37 Dario Andres 2010-03-03 04:02:40 UTC
Assume it is fixed since KDE SC 4.4.0.
Comment 38 Dario Andres 2010-03-03 04:02:59 UTC
*** Bug 229196 has been marked as a duplicate of this bug. ***
Comment 39 Alvaro Manuel Recio Perez 2010-03-10 15:42:15 UTC
Created attachment 41505 [details]
New crash information added by DrKonqi

I've got this error on KDE SC 4.4.1. I think it's the same bug but a developer should have a look. At least, I can read the same methods mentioned in the bug report on my stack trace.
Comment 40 Sebastian Sauer 2010-03-11 01:43:52 UTC
Reopen cause of comment #39 which has the backtrace on KDE 4.4.1 with Qt 4.6.2
Comment 41 Sebastian Sauer 2010-03-11 01:56:20 UTC
Created attachment 41527 [details]
patch that should help to figure out what goes wrong

This patch does introduce a Q_ASSERT that should assert if the KDirModel gets destroyed while the KFilePreviewGenerator is still alive and still holds a pointer to the KDirModel (which is not set to NULL what would result in a dangling pointer what would explain the crash).

The patch can be applied with
cd /path/to/sourcecode/KDE/kdelibs && patch -p0 < ug196681.patch && cd /path/to/builddir/KDE/kdelibs/kfile && make install

If the assert shows up Dr. Konqi allows to generate a backtrace. That backtrace would then show who deletes the KDirModel what we could fix then.
Comment 42 Aaron J. Seigo 2010-03-11 02:07:53 UTC
this is a bug in kfile, let's put it there.

personally, i'd suggest a QWeakPointer around the m_dirModel and checking it before use in all cases.

m_dirModel can also be NULL on line 441, yet the connection:

    QClipboard* clipboard = QApplication::clipboard();
    connect(clipboard, SIGNAL(dataChanged()),
            q, SLOT(updateCutItems()));

is made regardless of this, and updateCutItems expects m_dirModel to be valid.
that connection should perhaps be only made when m_dirModel.

i'm CC'ing David as this is much more his sort of territory of expertise than
mine :)
Comment 43 David Faure 2010-03-11 13:41:31 UTC
This is actually Peter's code :-)
Comment 44 Dario Andres 2010-03-17 01:55:29 UTC
*** Bug 231046 has been marked as a duplicate of this bug. ***
Comment 45 Dario Andres 2010-03-21 00:54:12 UTC
*** Bug 231194 has been marked as a duplicate of this bug. ***
Comment 46 Sebastian Sauer 2010-03-21 19:46:54 UTC
Created attachment 41811 [details]
backtrace that happens with patch from Comment #41
Comment 47 Sebastian Sauer 2010-03-21 19:48:42 UTC
Created attachment 41812 [details]
patch for kfile/kfilepreviewgenerator.cpp that should solve the problem
Comment 48 Dario Andres 2010-03-22 21:36:01 UTC
*** Bug 231830 has been marked as a duplicate of this bug. ***
Comment 49 David Faure 2010-03-23 15:36:45 UTC
So, did anyone run this in valgrind to find out why/where the dirmodel was being deleted? It sounds very wrong to me that the KFilePreviewGenerator would outlive the dirmodel, and the suggested fix is just a workaround IMHO.
Comment 50 Peter Penz 2010-03-23 16:30:21 UTC
Sorry for the late reply, I was not aware that there are so many duplicates for this issue. I agree with David that the suggested fix seems to be only a workaround, the model may not get deleted during the KFilePreviewGenerator (~controller/view) is still working on it.

I've reassigned this issue to me. I hope I've time during the next week for having a look on it. If anybody in the meantime has found out, who deletes the model, then of course this would be very welcome :-)
Comment 51 Dario Andres 2010-03-24 13:04:56 UTC
*** Bug 231984 has been marked as a duplicate of this bug. ***
Comment 52 Dario Andres 2010-03-31 14:54:00 UTC
*** Bug 232719 has been marked as a duplicate of this bug. ***
Comment 53 Dario Andres 2010-04-08 18:36:57 UTC
*** Bug 233748 has been marked as a duplicate of this bug. ***
Comment 54 Dario Andres 2010-04-12 01:44:04 UTC
*** Bug 234094 has been marked as a duplicate of this bug. ***
Comment 55 Dario Andres 2010-04-15 14:14:03 UTC
*** Bug 234317 has been marked as a duplicate of this bug. ***
Comment 56 Dario Andres 2010-04-17 20:43:26 UTC
*** Bug 234640 has been marked as a duplicate of this bug. ***
Comment 57 Jonathan Thomas 2010-04-18 22:02:29 UTC
*** Bug 234708 has been marked as a duplicate of this bug. ***
Comment 58 Jonathan Thomas 2010-04-18 22:04:30 UTC
*** Bug 234699 has been marked as a duplicate of this bug. ***
Comment 59 Mario García H. 2010-04-25 05:47:57 UTC
Created attachment 43020 [details]
New crash information added by DrKonqi

There is no obvious reason but -perhaps- intensive memory use as I have Konqueror with more than 20 tabs, talking via Skype + Kopete with Amarok and Kontact in background...

I wasn't doing anything in particular when the crash happened.
Comment 60 Beat Wolf 2010-05-09 10:58:10 UTC
*** Bug 236939 has been marked as a duplicate of this bug. ***
Comment 61 Beat Wolf 2010-05-09 11:01:47 UTC
*** Bug 236831 has been marked as a duplicate of this bug. ***
Comment 62 Nicolas L. 2010-06-01 09:49:31 UTC
*** Bug 240199 has been marked as a duplicate of this bug. ***
Comment 63 Aaron J. Seigo 2010-06-01 22:29:50 UTC
@Peter Penz: if this hasn't already been fixed in trunk, would you be alright with committing the workaround (though using a QWeakPointer rather than a QPointer :) at least for 4.5? getting rid of a crash, even if by work-around, is better than waiting on the right fix while shipping a known crasher again imho.
Comment 64 Nicolas L. 2010-06-10 00:38:29 UTC
*** Bug 241243 has been marked as a duplicate of this bug. ***
Comment 65 Nicolas L. 2010-06-28 10:11:19 UTC
*** Bug 242992 has been marked as a duplicate of this bug. ***
Comment 66 Aaron J. Seigo 2010-07-16 00:19:42 UTC
*** Bug 244786 has been marked as a duplicate of this bug. ***
Comment 67 Beat Wolf 2010-07-23 11:27:42 UTC
*** Bug 245493 has been marked as a duplicate of this bug. ***
Comment 68 Beat Wolf 2010-08-07 14:42:56 UTC
*** Bug 246299 has been marked as a duplicate of this bug. ***
Comment 69 gianted 2010-08-13 10:36:48 UTC
Created attachment 50119 [details]
New crash information added by DrKonqi

plasma-desktop (0.3) on KDE Platform 4.5.00 (KDE 4.5.0) using Qt 4.7.0

- What I was doing when the application crashed:
I was browsing the internet with chromium.
- Unusual behavior I noticed:
Immediately before the plasma crash, I was notified by tray notifier that the indexing service (perhaps strigi) was temporary interrupted. unfortunately, some crash perhaps involve this notifier, because i can't see the related message within history.

-- Backtrace (Reduced):
#7  0xb726a1aa in KDirModel::dirLister (this=0x8462488) at ../../kio/kio/kdirmodel.cpp:358
#8  0xb3c2b776 in KFilePreviewGenerator::qt_metacall (this=0x9b70c68, _c=QMetaObject::InvokeMetaMethod, _id=8, _a=0xbf8f2e6c) at ./kfilepreviewgenerator.moc:97
[...]
[...]
#11 0xb63a4c87 in QClipboard::dataChanged (this=0x8412128) at .moc/release-shared/moc_qclipboard.cpp:114
#12 0xb5cd5bf4 in QApplication::x11ProcessEvent (this=0x840ca08, event=0xbf8f323c) at kernel/qapplication_x11.cpp:3370
#13 0xb5d04b3a in x11EventSourceDispatch (s=0x841b0f0, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
Comment 70 Aaron J. Seigo 2010-08-26 03:31:19 UTC
*** Bug 249042 has been marked as a duplicate of this bug. ***
Comment 71 Aaron J. Seigo 2010-09-07 06:36:56 UTC
*** Bug 250334 has been marked as a duplicate of this bug. ***
Comment 72 Peter Penz 2010-09-12 08:28:24 UTC
@Aaron (in reply to comment #63): Sorry for the late reply - yes, applying the workaround is OK for me. I'm currently on vacation and cannot apply the patch from Sebastian, it would be great if someone else can commit the patch (I hope I find the time to fix this in a cleaner way for 4.6...) Thanks!
Comment 73 Peter Penz 2010-09-17 13:15:08 UTC
SVN commit 1176325 by ppenz:

KDirModel takes ownership of the directory lister, so don't delete the directory lister manually.

BUG: 196681


 M  +1 -2      dolphinpart.cpp  
 M  +1 -8      dolphinviewcontainer.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1176325
Comment 74 Peter Penz 2010-09-17 13:19:16 UTC
SVN commit 1176328 by ppenz:

Applications may not delete the directory model before deleting the KFilePreviewGenerator instance. However it is very easy for applications to violate this, so instead of crashing provide a warning for the application developer. Thanks a lot to Sebastian Sauer for the investigations and the patch!

CCBUG: 196681


 M  +7 -1      kfilepreviewgenerator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1176328
Comment 75 Peter Penz 2010-09-17 13:21:43 UTC
SVN commit 1176329 by ppenz:

Backport of SVN commit 1176328: Applications may not delete the directory model before deleting the KFilePreviewGenerator instance. However it is very easy for applications to violate this, so instead of crashing provide a warning for the application developer. Thanks a lot to Sebastian Sauer for the investigations and the patch!

CCBUG: 196681
FIXED-IN: 4.5.2


 M  +7 -1      kfilepreviewgenerator.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1176329
Comment 76 Dotan Cohen 2010-09-17 14:37:59 UTC
Great work, Peter and Sebastian! I hope that this one stays closed this time.
Comment 77 Christoph Feck 2010-09-17 20:03:31 UTC
*** Bug 251587 has been marked as a duplicate of this bug. ***
Comment 78 Beat Wolf 2010-10-11 12:50:39 UTC
*** Bug 253825 has been marked as a duplicate of this bug. ***
Comment 79 Beat Wolf 2010-10-19 16:24:47 UTC
*** Bug 254499 has been marked as a duplicate of this bug. ***
Comment 80 Beat Wolf 2010-11-12 10:18:05 UTC
*** Bug 256556 has been marked as a duplicate of this bug. ***
Comment 81 Beat Wolf 2010-11-15 16:39:00 UTC
*** Bug 256977 has been marked as a duplicate of this bug. ***
Comment 82 Christoph Feck 2010-11-17 02:35:18 UTC
*** Bug 257112 has been marked as a duplicate of this bug. ***
Comment 83 Christoph Feck 2010-11-17 02:36:39 UTC
*** Bug 257066 has been marked as a duplicate of this bug. ***
Comment 84 Dario Andres 2010-12-12 01:03:20 UTC
*** Bug 259560 has been marked as a duplicate of this bug. ***
Comment 85 Dario Andres 2010-12-27 02:25:24 UTC
*** Bug 261338 has been marked as a duplicate of this bug. ***
Comment 86 Dario Andres 2011-01-02 12:46:59 UTC
*** Bug 261822 has been marked as a duplicate of this bug. ***
Comment 87 Dario Andres 2011-01-08 17:26:51 UTC
*** Bug 262534 has been marked as a duplicate of this bug. ***
Comment 88 Dario Andres 2011-01-29 14:18:15 UTC
*** Bug 264137 has been marked as a duplicate of this bug. ***
Comment 89 Aaron J. Seigo 2011-02-02 00:24:16 UTC
*** Bug 265146 has been marked as a duplicate of this bug. ***
Comment 90 Beat Wolf 2011-04-12 10:55:08 UTC
*** Bug 268769 has been marked as a duplicate of this bug. ***