KDirModel takes ownership of the directory lister, so don't delete the directory lister manually.

BUG: 196681

svn path=/trunk/KDE/kdebase/apps/; revision=1176325